--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>WeMakeWebsites</title>
     <link rel="stylesheet" type="text/css" href="main.css"/>
     <link rel="stylesheet" type="text/css" href="navbar.css"/>
+    <link rel="stylesheet" type="text/css" href="carousel.css"/>
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto+Mono:100,300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Playfair+Display:900|Roboto+Mono:100,300,400,500" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -31,26 +32,34 @@
           <img src="./assets/Image/Large.svg" alt="logo image">
         </div>
         <nav class="column">
-          <ul>
+          <ul id="main-nav-list">
             <li><a href="home.html">HOME</a></li>
-            <li>
-              <a href="collections.html">COLLECTIONS</a>
-              <!-- <ul class="collectionList">
-                <li><a href="collection1.html">COLLECTION 1</a></li>
-                <li><a href="collection1.html">COLLECTION 2</a></li>
-                <li><a href="collection1.html">COLLECTION 3</a></li>
-                <li><a href="collection1.html">COLLECTION 4</a></li>
-              </ul>
-              <ul class="collectionList">
-                <li><a href="collection1.html">COLLECTION 1</a></li>
-                <li><a href="collection1.html">COLLECTION 2</a></li>
-                <li><a href="collection1.html">COLLECTION 3</a></li>
-                <li><a href="collection1.html">COLLECTION 4</a></li>
-              </ul>
-              <div class="imageCollectionContainer">
-                <img src="./assets/Image/Large.svg" alt="logo image">
-                <img src="./assets/Image/Large.svg" alt="logo image">
-              </div> -->
+            <li id="collections">
+              <a href="collections.html" >COLLECTIONS</a>
+              <div class="content">
+                <div class="column">
+                 <ul>
+                    <li><a href="collection1.html">Collection 1</a></li>
+                    <li><a href="collection1.html">Collection 2</a></li>
+                    <li><a href="collection1.html">Collection 3</a></li>
+                    <li><a href="collection1.html">Collection 4</a></li>
+                  </ul>
+                </div>
+                <div class="column">
+                 <ul>
+                    <li><a href="collection1.html">Collection 1</a></li>
+                    <li><a href="collection1.html">Collection 2</a></li>
+                    <li><a href="collection1.html">Collection 3</a></li>
+                    <li><a href="collection1.html">Collection 4</a></li>
+                  </ul>
+                </div>
+                <div class="column collection-img-container">
+                  <img src="./assets/Image/Large.svg" alt="placeholder image">
+                </div>
+                <div class="column collection-img-container">
+                  <img src="./assets/Image/Large.svg" alt="placeholder image">
+                </div>
+              </div>
             </li>
             <li><a href="lookbook.html">LOOKBOOK</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -63,6 +72,25 @@
           <img src="./assets/icon/bag.svg" alt="bag icon">
         </div>
       </header>
+      <section class="carousel">
+        <div id="left-arrow" class="arrow">
+          <img src="./assets/icon/back.svg" alt="left arrow">
+        </div>
+        <div id="right-arrow" class="arrow">
+          <img src="./assets/icon/forward.svg" alt="right arrow">
+        </div>
+        <div class="slide-container">
+          <div class="slide">
+            <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+            <div class="content">
+              <h1 class="headline">Image Slider</h1>
+              <p class="subheadline">Tell us your brand's story through videos and images</p>
+              <button>EXPLORE</button>
+            </div>
+          </div>
+        </div>
+
+      </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
