Add arrow to cart

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <img src="./assets/icon/bag.svg" alt="bag icon">
             <div class="cart-wrapper">
               <div class="cart-main-container">
+                <span class="triangle">▲</span>
                 <h3 class="cart-headline">Your Cart</h3>
                 <div class="cart-list">
                     <ul>
