--- a/index.html
+++ b/index.html
@@ -126,13 +126,31 @@
         <div id="right-arrow" class="arrow">
           <img src="./assets/icon/forward.svg" alt="right arrow">
         </div>
-        <div class="slide-container">
-          <div class="slide">
-            <img src="./assets/Image/Slider/Background.jpg" alt="face product">
-            <div class="content">
-              <h1 class="headline">Image Slider</h1>
-              <p class="subheadline">Tell us your brand's story through videos and images</p>
-              <button>EXPLORE</button>
+        <div class="slide-viewport">
+          <div class="slide-container">
+            <div class="slide">
+              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+              <div class="content">
+                <h1 class="headline">Image Slider</h1>
+                <p class="subheadline">Tell us your brand's story through videos and images</p>
+                <button>EXPLORE</button>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+              <div class="content">
+                <h1 class="headline"> Slider 2</h1>
+                <p class="subheadline">Tell us your brand's story through videos and images</p>
+                <button>EXPLORE</button>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+              <div class="content">
+                <h1 class="headline"> Slider 3</h1>
+                <p class="subheadline">Tell us your brand's story through videos and images</p>
+                <button>EXPLORE</button>
+              </div>
             </div>
           </div>
         </div>
@@ -140,6 +158,7 @@
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
 
