Fix announcement on mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <main>
-      <aside id="preNavContainer" class="padded">
+      <aside id="announcement" class="padded">
         <div class="currency">
           <button>
             <span class="currencyText">GBP</span>
@@ -22,12 +22,15 @@
             <span class="currencyText">USD</span>
           </button>
         </div>
-        <h3 id="announceTitle">ANNOUNCE SOMETHING HERE</h3>
+        <h3 class="title">ANNOUNCE SOMETHING HERE</h3>
         <div class="languagePicker">
           <span id="languageText">UK</span>
           <img class="icon" src="./assets/icon/down.svg" alt="down arrow">
         </div>
       </aside>
+      <h3 id="announcement-title-standalone">
+        ANNOUNCE SOMETHING HERE
+      </h3>
       <header class="padded">
         <div class="logoContainer">
           <img src="./assets/Image/Large.svg" alt="logo image">
