Fix slider responsiveness

--- a/index.html
+++ b/index.html
@@ -147,24 +147,21 @@
         </div>
         <div class="slide-viewport">
           <div class="slide-container">
-            <div class="slide">
-              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+            <div class="slide" style="background-image: url('./assets/Image/Slider/Background.jpg')">
               <div class="content">
                 <h1 class="headline">Image Slider</h1>
                 <p class="subheadline">Tell us your brand's story through videos and images</p>
                 <button>EXPLORE</button>
               </div>
             </div>
-            <div class="slide">
-              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+            <div class="slide" style="background-image: url('./assets/Image/Slider/Background.jpg')">
               <div class="content">
                 <h1 class="headline"> Slider 2</h1>
                 <p class="subheadline">Tell us your brand's story through videos and images</p>
                 <button>EXPLORE</button>
               </div>
             </div>
-            <div class="slide">
-              <img src="./assets/Image/Slider/Background.jpg" alt="face product">
+            <div class="slide" style="background-image: url('./assets/Image/Slider/Background.jpg')">
               <div class="content">
                 <h1 class="headline"> Slider 3</h1>
                 <p class="subheadline">Tell us your brand's story through videos and images</p>
