--- a/index.html
+++ b/index.html
@@ -42,43 +42,14 @@
           <img src="./assets/icon/bag.svg" alt="bag icon">
         </div>
       </header>
+
+      <nav class="mobile">
+      </nav>
       <header class="desktop padded">
         <div class="logoContainer">
           <img src="./assets/Image/Large.svg" alt="logo image">
         </div>
         <nav class="column">
-          <ul id="main-nav-list">
-            <li><a href="home.html">HOME</a></li>
-            <li id="collections">
-              <a href="collections.html" >COLLECTIONS</a>
-              <div class="content">
-                <div class="column">
-                 <ul>
-                    <li><a href="collection1.html">Collection 1</a></li>
-                    <li><a href="collection1.html">Collection 2</a></li>
-                    <li><a href="collection1.html">Collection 3</a></li>
-                    <li><a href="collection1.html">Collection 4</a></li>
-                  </ul>
-                </div>
-                <div class="column">
-                 <ul>
-                    <li><a href="collection1.html">Collection 1</a></li>
-                    <li><a href="collection1.html">Collection 2</a></li>
-                    <li><a href="collection1.html">Collection 3</a></li>
-                    <li><a href="collection1.html">Collection 4</a></li>
-                  </ul>
-                </div>
-                <div class="column collection-img-container">
-                  <img src="./assets/Image/Large.svg" alt="placeholder image">
-                </div>
-                <div class="column collection-img-container">
-                  <img src="./assets/Image/Large.svg" alt="placeholder image">
-                </div>
-              </div>
-            </li>
-            <li><a href="lookbook.html">LOOKBOOK</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-          </ul>
         </nav>
         <div class="iconContainer">
           <img src="./assets/icon/search.svg" alt="search icon">
@@ -89,6 +60,41 @@
           </div>
         </div>
       </header>
+
+      <aside class="temp-nav">
+        <ul class="main-nav-list">
+          <li><a href="home.html">HOME</a></li>
+          <li id="collections">
+            <a href="collections.html" >COLLECTIONS</a>
+            <div class="content">
+              <div class="column">
+               <ul>
+                  <li><a href="collection1.html">Collection 1</a></li>
+                  <li><a href="collection1.html">Collection 2</a></li>
+                  <li><a href="collection1.html">Collection 3</a></li>
+                  <li><a href="collection1.html">Collection 4</a></li>
+                </ul>
+              </div>
+              <div class="column">
+               <ul>
+                  <li><a href="collection1.html">Collection 1</a></li>
+                  <li><a href="collection1.html">Collection 2</a></li>
+                  <li><a href="collection1.html">Collection 3</a></li>
+                  <li><a href="collection1.html">Collection 4</a></li>
+                </ul>
+              </div>
+              <div class="column collection-img-container">
+                <img src="./assets/Image/Large.svg" alt="placeholder image">
+              </div>
+              <div class="column collection-img-container">
+                <img src="./assets/Image/Large.svg" alt="placeholder image">
+              </div>
+            </div>
+          </li>
+          <li><a href="lookbook.html">LOOKBOOK</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+      </aside>
 
       <aside class="temp-cart">
         <div class="cart-wrapper">
