Fix mobile nav toggle

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="./assets/Image/Large.svg" alt="logo image">
         </div>
         <div class="shopping-cart column">
-          <img src="./assets/icon/bag.svg" alt="bag icon">
+          <img src="./assets/icon/bag.svg" class="cart-icon" alt="bag icon">
         </div>
       </header>
 
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-
+        <div class="markers"></div>
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
