Fix desktop collections and add triangle to it

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <li id="collections">
             <a href="collections.html" >COLLECTIONS</a>
             <div class="content">
+              <span class="triangle">▲</span>
               <div class="column">
                <ul>
                   <li><a href="collection1.html">Collection 1</a></li>
