Fix id and class names

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <aside id="announcement" class="padded">
         <div class="currency">
           <button>
-            <span class="currencyText">GBP</span>
+            <span class="currency-text">GBP</span>
           </button>
           <button>
-            <span class="currencyText">USD</span>
+            <span class="currency-text">USD</span>
           </button>
         </div>
         <h3 class="title">ANNOUNCE SOMETHING HERE</h3>
-        <div class="languagePicker">
-          <span id="languageText">UK</span>
+        <div class="language-picker">
+          <span id="language-text">UK</span>
           <img class="icon" src="./assets/icon/down.svg" alt="down arrow">
         </div>
       </aside>
@@ -32,10 +32,10 @@
         ANNOUNCE SOMETHING HERE
       </h3>
       <header class="mobile padded">
-        <div class="drawerContainer column">
+        <div class="drawer-container column">
           <img src="./assets/Mobile/Elements/ic_drawer.svg" alt="drawer icon">
         </div>
-        <div class="logoContainer column">
+        <div class="logo-container column">
           <img src="./assets/Image/Large.svg" alt="logo image">
         </div>
         <div class="shopping-cart column">
@@ -46,12 +46,12 @@
       <nav class="mobile">
       </nav>
       <header class="desktop padded">
-        <div class="logoContainer">
+        <div class="logo-container">
           <img src="./assets/Image/Large.svg" alt="logo image">
         </div>
         <nav class="column">
         </nav>
-        <div class="iconContainer">
+        <div class="icon-container">
           <img src="./assets/icon/search.svg" alt="search icon">
           <img src="./assets/icon/profile.svg" alt="profile icon">
           <img src="./assets/icon/heart.svg" alt="heart icon">
